fix test problems